1.20.4 support, some refactor